fp animation safari fix (transform translate3d(0, 0, 0))

--- a/src/sass/layout/_fp_content.scss
+++ b/src/sass/layout/_fp_content.scss
@@ -73,6 +73,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    // For safari transition fix
+    transform: translate3d(0, 0, 0);
   }
 
   &:hover::after,
